@@ -248,7 +248,7 @@ BusyBox is licensed under the
 <TR><TD BGCOLOR="#eeeee0">
 Current documentation for BusyBox includes: 
 <ul>
-    <li> <a href="BusyBox.html">BusyBox.html</a>
+    <li> <a href="ftp://ftp.lineo.com/pub/busybox/BusyBox.html">BusyBox.html</a>
 		This is a list of the all the available commands in BusyBox with complete 
 		usage information and examples of how to use each app.  I spent 
 		a <em>lot</em> of time updating these docs and trying to make them 
