@@ -34,6 +34,9 @@
 	* zcat now works (wasn't working since option parsing was broken)
 	* Renamed "mnc" to the more correct "nc" (for netcat).
 	* Makefile intelligence updates
+	* Changed the way init parses /etc/inittab entries to avoid problems
+	    with commands that contain colons in them.  Fix thanks to 
+	    Pavel Roskin <pavel_roskin@geocities.com>
 	* More doc updates
 
 
